--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,7 +7,7 @@
   flex-flow: row wrap;
 
   .left-pane {
-    @include flex(1 1 180px);
+    @include flex(0.4 1 180px);
 
     @media (max-width: 720px) {
       border-bottom: $lightpage-border;
@@ -33,7 +33,7 @@
         margin-top: 30px;
         font-weight: 600;
         line-height: 35px;
-        font-size: 28px;
+        font-size: 32px;
         text-transform: uppercase;
         color: #11315D;
         &.dark {
